//
// Copyright 2018 eBay Corporation
// Author: Brian Szmyd <bszmyd@ebay.com>

syntax = "proto3";

import "common.proto";
import "service.proto";

package sds.messaging;

message JoinGroupMsg {
    string                  group_id        = 1;
    service.ServiceGroup    service_group   = 2;
}

message JoinGroupResult {
    ErrorStatus  status  = 1;
}
