//
// Copyright 2018 eBay Corporation
// Author: Brian Szmyd <bszmyd@ebay.com>

syntax = "proto3";

import "raft_types.proto";

package nuraft_mesg;

message RaftGroupMsg {
    string                  group_name          = 1;
    RaftMessage             msg                 = 2;
    string                  intended_addr       = 3;
    string                  group_type          = 4;
}
service Messaging { rpc RaftStep(RaftGroupMsg) returns (RaftGroupMsg); }
